Remove jvmArgs